# cip_shuffle

./: .gitignore  CMakeLists.txt  README.md  helloworld  helloworld.cpp  main  main.cpp
benchmarks/: 00_analysis.ipynb  01_analysis.ipynb  02_analysis.ipynb  03_analysis.ipynb  20231018-172519-nb=128-bf=256-th=256-cpp.csv  20231018-174448-nb=128-bf=256-th=262144-cpp.csv  20231021-174938-nb=4-bf=256-th=256-cpp.csv  20231021-181216-nb=4-bf=256-th=262144-cpp.csv  20231021-182115-nb=128-bf=256-th=256-cpp.csv  20231021-190839-nb=128-bf=256-th=262144-cpp.csv  run_buffered_benchs.sh  run_cip_shuffle_benchs.sh  run_cpp_benchmarks.sh
benchmarks/cpp/: 20231028-222905-nb=128-bf=256-th=262144-cpp.csv  20231030-000746-nb=128-bf=256-th=262144-cpp.csv  20231102-111521-nb=4-bf=256-th=262144-cpp.csv  20231213-020409-nb=0-bf=0-th=0-cpp.csv  20231213-021932-nb=0-bf=0-th=0-cpp.csv  20231213-030400-nb=0-bf=256-th=0-cpp.csv
benchmarks/cpp/MacBook/v0.1.0/: 20230908-190427-nb=4-th=256-cpp.csv  20230908-191004-nb=4-th=256-cpp.csv  20230909-012900-nb=4-th=256-cpp.csv  20230909-144617-nb=4-th=256-cpp.csv  20230909-144853-nb=4-th=256-cpp.csv  20230909-151326-nb=4-th=256-cpp.csv
benchmarks/cpp/MacBook/v0.1.1/: 20230917-125525-nb=4-th=4096-cpp.csv  20230920-233509-nb=4-th=1073741824-cpp.csv
benchmarks/cpp/MacBook/v0.1.2/: 20230923-164142-nb=4-th=256-cpp.csv  20230924-210548-nb=4-th=4096-cpp.csv  20230924-221231-nb=4-th=262144-cpp.csv  20230926-160516-nb=4-th=1073741824-cpp.csv  20230926-184813-nb=16-th=256-cpp.csv  20230926-210148-nb=32-th=256-cpp.csv  20230926-214557-nb=32-th=262144-cpp.csv  20230926-224228-nb=64-th=262144-cpp.csv  20230926-225539-nb=128-th=256-cpp.csv  20230926-231807-nb=128-th=4096-cpp.csv  20230926-233457-nb=128-th=262144-cpp.csv
benchmarks/cpp/MacBook/v0.1.3/: 20230927-195905-nb=16-th=1073741824-cpp.csv  20230927-202730-nb=16-th=1073741824-cpp.csv  20231001-215244-nb=16-th=1073741824-cpp.csv  20231011-150446-nb=16-th=1073741824-cpp.csv  20231011-211811-nb=4-th=256-cpp.csv  20231011-220031-nb=4-th=4096-cpp.csv
benchmarks/cpp/MacBook/v0.1.4/: 20231014-145431-nb=4-bf=256-th=256-cpp.csv  20231014-154220-nb=4-bf=256-th=4096-cpp.csv  20231014-161829-nb=4-bf=256-th=262144-cpp.csv  20231014-170008-nb=128-bf=256-th=256-cpp.csv  20231014-175115-nb=128-bf=256-th=4096-cpp.csv  20231014-180517-nb=128-bf=256-th=262144-cpp.csv
benchmarks/cpp/MacBook/v0.1.5/: 20231017-165217-nb=4-bf=256-th=262144-cpp.csv  20231017-173010-nb=128-bf=256-th=4096-cpp.csv
benchmarks/cpp/MacBook/v0.1.6/: 20231018-165805-nb=4-bf=256-th=4096-cpp.csv  20231018-173805-nb=128-bf=256-th=4096-cpp.csv  20231022-181347-nb=128-bf=256-th=1073741824-cpp.csv
benchmarks/cpp/MacBook/v0.1.7/: 20231029-215841-nb=128-bf=256-th=262144-cpp.csv  20231101-225634-nb=128-bf=256-th=262144-cpp.csv  20231101-233633-nb=4-bf=256-th=262144-cpp.csv  20231102-113851-nb=4-bf=256-th=256-cpp.csv  20231102-121521-nb=16-bf=256-th=256-cpp.csv
benchmarks/cpp/Windows Machine/v0.1.6/: 20231021-180249-nb=4-bf=256-th=4096-cpp.csv  20231021-183648-nb=128-bf=256-th=4096-cpp.csv  20231021-191442-nb=128-bf=256-th=1073741824-cpp.csv
benchmarks/cpp/Windows Machine/v0.1.7/: 20231104-232754-nb=128-bf=256-th=262144-cpp.csv
benchmarks/cpp/Windows Machine/v0.1.9/: 20231213-161234-nb=0-bf=0-th=0-cpp.csv  20231213-162309-nb=0-bf=0-th=0-cpp.csv  20231213-162854-nb=0-bf=0-th=0-cpp.csv  20231213-163350-nb=0-bf=0-th=0-cpp.csv  20231213-164010-nb=0-bf=256-th=0-cpp.csv  20231213-170637-nb=0-bf=256-th=0-cpp.csv
benchmarks/cpp/uni-machine/v0.1.12/: 20231218-032542-nb=32-bf=256-th=262144-cpp.csv
benchmarks/evaluation/: 06_analysis.ipynb  06_analysis_buffered.ipynb  06_analysis_uni.ipynb  06_analysis_win.ipynb  07_analysis_buffered.ipynb  08_analysis_buffered.ipynb  09_analysis.ipynb  09_analysis_buffered.ipynb  09_analysis_cip_shuffle_base_case.ipynb  09_analysis_cip_shuffle_buckets.ipynb  09_analysis_cip_shuffle_threshold.ipynb  09_analysis_cip_shuffle_threshold_fy32.ipynb  09_analysis_rust.ipynb  10_analysis.ipynb
benchmarks/evaluation/old/: 04_analysis_rust.ipynb  05_analysis.ipynb  06_analysis_buffered.ipynb  06_analysis_uni.ipynb
benchmarks/rust/: 20231227-171113-nb=128-th=524288-r.csv  20231227-173557-nb=128-th=262144-r.csv  20231227-175653-nb=32-th=1048576-r.csv
benchmarks/rust/MacBook/: 20230917-140323-nb=4-th=4096-r.csv  20230917-144954-nb=4-th=262144-r.csv  20230926-135704-nb=4-th=1073741824-r.csv  20231022-151319-nb=4-th=256-r.csv  20231022-152534-nb=4-th=4096-r.csv  20231022-153710-nb=128-th=256-r.csv  20231022-155350-nb=128-th=262144-r.csv
benchmarks/v0.1.0/: 20230908-190914-nb=4-th=256-cpp.csv  20230909-151453-nb=4-th=256-cpp.csv
benchmarks/v0.1.1/: 20230909-152246-nb=4-th=256-cpp.csv  20230917-145712-nb=4-th=262144-cpp.csv  20230920-231236-nb=4-th=1073741824-cpp.csv
benchmarks/v0.1.2/: 20230926-162717-nb=4-th=1073741824-cpp.csv  20230926-173121-nb=8-th=256-cpp.csv  20230926-180353-nb=8-th=4096-cpp.csv  20230926-182856-nb=8-th=262144-cpp.csv  20230926-191538-nb=16-th=4096-cpp.csv  20230926-193459-nb=16-th=262144-cpp.csv  20230926-212523-nb=32-th=4096-cpp.csv  20230926-220056-nb=64-th=256-cpp.csv  20230926-222308-nb=64-th=4096-cpp.csv
benchmarks/v0.1.3/: 20230927-201407-nb=16-th=1073741824-cpp.csv  20230927-204053-nb=16-th=1073741824-cpp.csv  20231001-014751-nb=16-th=1073741824-cpp.csv  20231011-223343-nb=4-th=262144-cpp.csv
benchmarks/v0.1.4/: 20231014-164223-nb=4-bf=256-th=1073741824-cpp.csv
benchmarks/v0.1.5/: 20231017-160045-nb=4-bf=256-th=256-cpp.csv  20231017-162750-nb=4-bf=256-th=4096-cpp.csv  20231017-171153-nb=128-bf=256-th=256-cpp.csv  20231017-174425-nb=128-bf=256-th=4096-cpp.csv
benchmarks/v0.1.6/: 20231018-164239-nb=4-bf=256-th=256-cpp.csv  20231018-170925-nb=4-bf=256-th=262144-cpp.csv
rust/: Cargo.toml
rust/src/: main.rs
src/: CMakeLists.txt  base_case_bench.cpp  buffered_bench.cpp  cip_shuffle.hpp  cip_shuffle_bench.cpp  main.cpp
tests/: CMakeLists.txt  chi_squared_test.cpp  cip_shuffle_test.cpp  counting_permutations.cpp  distribution_tests.cpp  rough_scatter_tests.cpp  statistical_tests.cpp
(+147 files in other folders)
